admission/ValidatingAdmissionPolicy/policies/image-no-latest/initcontainers/deny.yaml
apiVersion: v1
kind: Pod
metadata:
  name: violating-image-no-latest-initcontainers
  annotations:
    kubeapt.io/uuid: "a52a6b23-ee6b-41cb-ab79-140ce371ed6d"
spec:
  containers:
  - name: main
    image: busybox:1.36
    command: ["sh", "-c", "sleep 3600"]
